Add default OS X image

--- a/.travis.yml
+++ b/.travis.yml
@@ -17,10 +17,10 @@ matrix:
     - os: osx
       node_js: '4'
       osx_image: xcode8.1
-  include:
     - os: osx
       node_js: '4'
-      osx_image: xcode8.1
+  include:
+    - os: osx
 
 cache: yarn
 
